--- a/index.html
+++ b/index.html
@@ -1,240 +1,250 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Live-Class-Project-12</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  </head>
-  <body>
-    <div class="container">
-      <!-- hero-1 -->
-      <div class="hero-1">
-        <div class="nav">
-          <!-- navigation -->
-          <div class="logo">
-            <img src="./images/white-logo.png" alt="brand-logo" />
-          </div>
-          <div class="grow-list">
-            <ul class="list">
-              <li class="list-item">Home</li>
-              <li class="list-item">About Us</li>
-              <li class="list-item">Pages</li>
-              <li class="list-item">Agent</li>
-              <li class="list-item">Blog</li>
-              <li class="list-item">Subscribe</li>
-            </ul>
-          </div>
-          <div class="button-group">
-            <button class="nav-button">Let's Talk</button>
-          </div>
-        </div>
-        <div class="down">
-          <div class="left">
-            <img src="./images/first.jpg" alt="Image" class="first" />
-          </div>
-          <div class="right">
-            <h1>Enpowering your business with the best solution</h1>
-            <p>
-              We connect your brand & businessses with your target market in the
-              most desirable, refined, and elvated way possible through the
-              digital medium.
-            </p>
-          </div>
-          <div class="down-1">
-            <img src="./images/email-mail-svgrepo-com.svg" alt="img">
-            <input type="text" placeholder="Enter Your Email Address" class="Email">
-            <button class="btn">Let's Talk</button>
-          </div>
-        </div>
-      </div>
-      <!-- hero-2 -->
-      <div class="hero-2">
-        <div class="up">
-          <h1>We Connect your businesses with your target</h1>
-        </div>
-        <div class="down">
-          <!-- card-1 -->
-          <div class="card">
-            <h1>1,093</h1>
-            <p>Finished Project</p>
-          </div>
-          <!-- card-2 -->
-          <div class="card">
-            <h1>3,355</h1>
-            <p>Enrolled Project</p>
-          </div>
-          <!-- card-3 -->
-          <div class="card">
-            <h1>40</h1>
-            <p>Team Worker</p>
-          </div>
-          <!-- card-4 -->
-          <div class="card">
-            <h1>90%</h1>
-            <p>Satisfaction Rate</p>
-          </div>
-        </div>
-        <div class="imagia">
-          <img src="./images/second.jpg" alt="image" class="image" />
-        </div>
-      </div>
-      <!-- hero-3 -->
-      <div class="hero-3">
-        <div class="up">
-          <h1>
-            We have made your <br />
-            care easy for you
-          </h1>
-        </div>
-        <div class="down">
-          <div class="left">
-            <h1>Effective Website Design and Devlopment</h1>
-            <p>
-              By connecting patients all over the world to the best instructors,
-              Helthcare helping individuals reach their goals and pursue their
-              dreams.
-            </p>
-            <button class="btn">Let's Talk</button>
-          </div>
-          <div class="right">
-            <img src="./images/third.jpg" alt="img" class="imagia" />
-          </div>
-        </div>
-      </div>
-      <!-- hero-4 -->
-      <div class="hero-4">
-        <div class="left">
-          <img src="./images/fourth.jpg" alt="img" class="imagia">
-        </div>
-        <div class="right">
-          <h1>We Give Proven Digital Marketing Strategies for Our Clients</h1>
-          <p>
-            Consultant working hard and we collaborate with organizations that
-            are keen transform the legal industry. reach their goals and purse
-            their dreams.
-          </p>
-          <button class="btn">Let's Talk</button>
-        </div>
-      </div>
-      <!-- hero-5 -->
-      <div class="hero-5">
-        <div class="left">
-          <h1>People Will Always Judge the book by it's cover.</h1>
-          <p>
-            By connecting patients all over the worls to the best instructors,
-            Helthycare helping individuals reach their goals and pursue their
-            dreams.
-          </p>
-          <button class="btn">Let's Talk</button>
-        </div>
-        <div class="right">
-          <img src="./images/fifth.jpg" alt="img" class="imagia">
-        </div>
-      </div>
-      <!-- hero-6 -->
-      <div class="hero-6">
-        <div class="left">
-          <h1>Meets our great <br> Creative Teams</h1>
-        </div>
-        <div class="right">
-          <p>
-            Our journey began with a simpla <br> journey make this world more
-            function. We collaborate <br> with organization that are keen transform
-          </p>
-        </div>
-      </div>
-      <!-- hero-7 -->
-      <div class="hero-7">
-        <!-- card-1 -->
-        <div class="card">
-          <img src="./images/1.jpg" alt="1per" class="imagia">
-          <h3>Amera Amanda</h3>
-          <p>
-            Introductiopn strat procrasninate 2 hour get to do work get to do
-            work while eating
-          </p>
-        </div>
-        <!-- card-2 -->
-        <div class="card">
-          <img src="./images/2.jpg" alt="2per" class="imagia">
-          <h3>Lucas Podolski</h3>
-          <p>
-            Introductiopn strat procrasninate 2 hour get to do work get to do
-            work while eating
-          </p>
-        </div>
-        <!-- card-3 -->
-        <div class="card">
-          <img src="./images/3.jpg" alt="3per" class="imagia">
-          <h3>Leny Marissa Nasution</h3>
-          <p>
-            Introductiopn strat procrasninate 2 hour get to do work get to do
-            work while eating
-          </p>
-        </div>
-        <div class="button-1">
-          <button class="btn">See More</button>
-        </div>
-      </div>
 
-      <!-- footer -->
-      <div class="hero-8">
+    <link rel="stylesheet" href="styles.css" />
 
-        <div class="top">
-          <div class="logo-details">
-            <img src="./images/white-logo.png" alt="" class="logo">
-          </div>
-          <div class="media-icons">
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-github"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-          </div>
-        </div>
-        <hr>
-        <div class="link-boxes">
-          <ul class="box">
-            <li class="link_name">Our Products</li>
-            <li><a href="#">The Support Suite</a></li>
-            <li><a href="#">The Sales Suite</a></li>
-            <li><a href="#">Support</a></li>
-            <li><a href="#">Guide</a></li>
-          </ul>
-          <ul class="box">
-            <li class="link_name">Top Features</li>
-            <li><a href="#">Ticketing System</a></li>
-            <li><a href="#">Knowledge Base</a></li>
-            <li><a href="#">Community Forums</a></li>
-            <li><a href="#">Help Desk Software</a></li>
-          </ul>
-          <ul class="box">
-            <li class="link_name">Resources</li>
-            <li><a href="#">Product Support</a></li>
-            <li><a href="#">Request Demo</a></li>
-            <li><a href="#">Library</a></li>
-            <li><a href="#">Business Blog</a></li>
-          </ul>
-          <ul class="box">
-            <li class="link_name">Company</li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Press</a></li>
-            <li><a href="#">Investors</a></li>
-            <li><a href="#">Events</a></li>
-          </ul>
-          <ul class="box">
-            <li class="link_name">Favourite Things</li>
-            <li><a href="#">For Enterprise</a></li>
-            <li><a href="#">For Startups</a></li>
-            <li><a href="#">For Benchmark</a></li>
-            <li><a href="#">For Small Business</a></li>
-          </ul>
-        </div>
 
-      </div>
+
+    <script src="https://kit.fontawesome.com/cc70fa30b0.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <div class="wrapper">
+        <!-- Navbar -->
+        <nav class="navBar">
+            <div>
+                <div class="brandLogo">
+                    <img src="./Assets/Logo.png" alt="logo" />
+                </div>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/">About</a></li>
+                    <li><a href="/">pages</a></li>
+                    <li><a href="/">Agent</a></li>
+                    <li><a href="/">Blog</a></li>
+                    <li><a href="/">Subscribe</a></li>
+                    <li><button>Let's Talk</button></li>
+                    <li class="menu"><a href="/"><i class="fas fa-bars"></i></a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <!-- First part-->
+
+        <div class="imageWithTextSection">
+            <div class="container">
+                <div class="leftBox">
+                    <img src="./Assets/business-content-1.jpg" alt="Img" />
+                </div>
+                <div class="rightBox">
+                    <h2>Empowering your Busisness with the best solution</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id accusamus incidunt aut amet debitis or sit amet consectetur adipisicing elit. Id accusamus incidunt aut amet debitis.
+                    </p>
+                    <div class="emailBox">
+                        <i class="fas fa-envelope"></i>
+                        <form action="">
+                            <input type="email" placeholder="Enter your email address" />
+                            <button type="submit">Let's Talk</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <!-- Counter Part -->
+            <div class="countersection">
+                <h2 class="heading">We Connect your busisness with your target</h2>
+
+                <div class="counterBox">
+                    <div class="box">
+                        <h2>1,093</h2>
+                        <p>Finished Projects</p>
+                    </div>
+                    <div class="box">
+                        <h2>3,355</h2>
+                        <p>Enrolled Projects</p>
+                    </div>
+                    <div class="box">
+                        <h2>40</h2>
+                        <p>Team Worker</p>
+                    </div>
+                    <div class="box">
+                        <h2>90%</h2>
+                        <p>Satisfaction Rate</p>
+                    </div>
+                </div>
+
+                <div class="video">
+                    <img src="./Assets/target-1.jpg" alt="img" />
+                </div>
+
+                <!-- Our Work Part -->
+                <div class="ourWorksection">
+                    <h2 class="heading">We have made your care easy for you</h2>
+
+                    <div class="mainWorkMainBox">
+                        <div class="personBox">
+                            <div class="leftBox">
+                                <h2>Effective Website Design and Development</h2>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur hic illo optio corporis aliquam, iusto at voluptate, in tempora molestias officiis inventore ut velit sunt ipsum officia expedita quos non.
+                                </p>
+                                <button class="letsTalkBtn">Let's Talk</button>
+                            </div>
+                            <div class="rightBox">
+                                <img src="./Assets/design-1.jpg" alt="person" />
+                            </div>
+                        </div>
+                        <div class="personBox oddPerson">
+                            <div class="leftBox">
+                                <h2>Effective Website Design and Development</h2>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur hic illo optio corporis aliquam, iusto at voluptate, in tempora molestias officiis inventore ut velit sunt ipsum officia expedita quos non.
+                                </p>
+                                <button class="letsTalkBtn">Let's Talk</button>
+                            </div>
+                            <div class="rightBox">
+                                <img src="./Assets/digital-1.jpg" alt="person" />
+                            </div>
+                        </div>
+                        <div class="personBox">
+                            <div class="leftBox">
+                                <h2>Effective Website Design and Development</h2>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur hic illo optio corporis aliquam, iusto at voluptate, in tempora molestias officiis inventore ut velit sunt ipsum officia expedita quos non.
+                                </p>
+                                <button class="letsTalkBtn">Let's Talk</button>
+                            </div>
+                            <div class="rightBox">
+                                <img src="./Assets/judge.jpg" alt="person" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Our Team Part -->
+                <div class="ourTeam">
+                    <div class="ourTeamhead">
+                        <h2>Meets Our Great Creative Team</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati necessitatibus atque velit ullam magnam? Facilis harum vel a minus cum.
+                        </p>
+                    </div>
+                    <div class="teamMainSection">
+                        <div class="teamBox">
+                            <div class="marginDiv">
+                                <div class="imageBox">
+                                    <img src="./Assets/team-1-logo.jpg" alt="person" />
+                                </div>
+                                <div class="contentBox">
+                                    <h2>Amera Amanda</h2>
+                                    <p>
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis commodi.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="teamBox">
+                            <div class="marginDiv">
+                                <div class="imageBox">
+                                    <img src="./Assets/team-2-logo.jpg" alt="person" />
+                                </div>
+                                <div class="contentBox">
+                                    <h2>Amera Amanda</h2>
+                                    <p>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. vero cumque?
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="teamBox">
+                            <div class="marginDiv">
+                                <div class="imageBox">
+                                    <img src="./Assets/team-3-logo.jpg" alt="person" />
+                                </div>
+                                <div class="contentBox">
+                                    <h2>Amera Amanda</h2>
+                                    <p>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto inventore placeat.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="seemore">See More</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </body>
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="footerHead">
+                <img src="./Assets/Logo.png" alt="img" />
+                <ul>
+                    <li><i class="fab fa-instagram"></i></li>
+                    <li><i class="fab fa-facebook-square"></i></li>
+                    <li><i class="fab fa-twitter"></i></li>
+                    <li><i class="fab fa-github"></i></li>
+                    <li><i class="fab fa-instagram"></i></li>
+                </ul>
+            </div>
+            <div class="footerBottom">
+                <ul>
+                    <li>
+                        <h2>Our Products</h2>
+                    </li>
+                    <li>The Support Suite</li>
+                    <li>The Sale Suite</li>
+                    <li>Support</li>
+                    <li>Guide</li>
+                </ul>
+                <ul>
+                    <li>
+                        <h2>Top Features</h2>
+                    </li>
+                    <li>Ticketing System</li>
+                    <li>Knowledge Base</li>
+                    <li>Community Forumns</li>
+                    <li>Help Desk Softwares</li>
+                </ul>
+                <ul>
+                    <li>
+                        <h2>Resources</h2>
+                    </li>
+                    <li>Product Support</li>
+                    <li>Request Demo</li>
+                    <li>Library</li>
+                    <li>Busisness Blog</li>
+                </ul>
+                <ul>
+                    <li>
+                        <h2>Company</h2>
+                    </li>
+                    <li>About Us</li>
+                    <li>Press</li>
+                    <li>Investors</li>
+                    <li>Events</li>
+                </ul>
+                <ul>
+                    <li>
+                        <h2>Favourite Things</h2>
+                    </li>
+                    <li>For Enterprise</li>
+                    <li>For Startups</li>
+                    <li>For Benchmark</li>
+                    <li>For Small Busisness</li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    </div>
+</body>
+
 </html>
